// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput/> correct translation 1`] = `
<div
  className="group"
>
  <input
    autoComplete="off"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={true}
    type="text"
  />
  <label
    htmlFor="test"
  >
    <span>
      Settings
    </span>
  </label>
  <span
    className="highlight"
  />
  <span
    className="bar"
  />
</div>
`;

exports[`<TextInput/> correct value 1`] = `
<div
  className="group"
>
  <input
    autoComplete="off"
    defaultValue={42}
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={true}
    type="text"
  />
  <label
    htmlFor="test"
  >
    <span>
      without.translation
    </span>
  </label>
  <span
    className="highlight"
  />
  <span
    className="bar"
  />
</div>
`;

exports[`<TextInput/> loading spinner 1`] = `
<div
  className="group"
>
  <input
    autoComplete="off"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={true}
    type="text"
  />
  <label
    htmlFor="test"
  >
    <span>
      without.translation
    </span>
  </label>
  <span
    className="highlight"
  />
  <span
    className="bar"
  />
  <div
    className="input-add-on-item spinner active"
  >
    <div
      className="double-bounce1"
    />
    <div
      className="double-bounce2"
    />
  </div>
</div>
`;

exports[`<TextInput/> render 1`] = `
<div
  className="group"
>
  <input
    autoComplete="off"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={true}
    type="text"
  />
  <label
    htmlFor="test"
  >
    <span>
      without.translation
    </span>
  </label>
  <span
    className="highlight"
  />
  <span
    className="bar"
  />
</div>
`;
